--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
     "@hookform/resolvers": "^3.9.0",
+    "@mysten/dapp-kit": "^0.18.0",
+    "@mysten/seal": "^0.6.0",
+    "@mysten/sui": "^1.38.0",
+    "@mysten/walrus": "^0.7.0",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.19.0",
+    "@tanstack/react-query": "^5.90.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
