Initialize Decentralized Storage Services

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,21 @@ GOOGLE_CLIENT_ID="your google-client id"
 GOOGLE_CLIENT_SECRET="your google-client secret"
 
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+# Decentralized Storage Configuration
+# Storage strategy: cloudinary | walrus | hybrid
+STORAGE_STRATEGY="hybrid"
+
+# Walrus Protocol Configuration (uses real testnet endpoints by default)
+# Optionally override with custom URLs (comma-separated)
+# WALRUS_PUBLISHER_URLS="https://custom-publisher1.com,https://custom-publisher2.com"
+# WALRUS_AGGREGATOR_URLS="https://custom-aggregator1.com,https://custom-aggregator2.com"
+
+# Sui Blockchain Configuration
+SUI_NETWORK="testnet"
+SUI_PRIVATE_KEY="your-sui-private-key"
+
+# Seal Protocol Configuration (optional)
+SEAL_ENABLED="false"
+SEAL_PACKAGE_ID="your-seal-package-id"
+SEAL_SERVER_OBJECT_IDS="server-object-id-1,server-object-id-2"
