fix: solve problem cluster pusher
- Set cluster into variable environment
- Fix error missing key

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ CLOUDINARY_API_SECRET="api secret"
 NEXT_PUBLIC_PUSHER_APP_KEY="your pusher app key"
 PUSHER_APP_ID="Your app id"
 PUSHER_SECRET="Your pusher secret"
+PUSHER_CLUSTER="Your pusher cluster"
 
 RESEND_API_KEY="your resend api key"
 
