--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "vercel-build": "prisma generate && prisma migrate deploy && prisma db seed && next build",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "doppler": "doppler secrets download --no-file --format env > .env"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
