fix code update member

--- a/package.json
+++ b/package.json
@@ -14,55 +14,55 @@
     "doppler": "doppler secrets download --no-file --format env > .env"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.2",
-    "@hookform/resolvers": "^3.9.0",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@hookform/resolvers": "^3.10.0",
     "@mysten/dapp-kit": "^0.18.0",
     "@mysten/enoki": "^0.12.1",
     "@mysten/seal": "^0.6.0",
     "@mysten/sui": "^1.38.0",
     "@mysten/walrus": "^0.7.0",
-    "@nextui-org/react": "^2.4.6",
-    "@prisma/client": "^5.19.0",
+    "@nextui-org/react": "^2.6.11",
+    "@prisma/client": "^5.22.0",
     "@tanstack/react-query": "^5.90.2",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.18.2",
     "next": "14.2.6",
-    "next-auth": "^5.0.0-beta.20",
-    "next-cloudinary": "^6.12.0",
+    "next-auth": "5.0.0-beta.29",
+    "next-cloudinary": "^6.16.0",
     "pusher": "^5.2.0",
-    "pusher-js": "^8.4.0-rc2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.5",
-    "resend": "^4.0.0",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "pusher-js": "^8.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^10.0.6",
+    "resend": "^4.8.0",
+    "zod": "^3.25.76",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.9.0",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.19.18",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.4",
-    "postcss": "^8",
-    "prisma": "^5.19.0",
-    "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.3.3",
+    "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.5.6",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
