--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^3.10.0",
+    "@internationalized/date": "^3.9.0",
     "@mysten/dapp-kit": "^0.18.0",
     "@mysten/enoki": "^0.12.1",
     "@mysten/seal": "^0.6.0",
@@ -23,18 +24,26 @@
     "@mysten/walrus": "^0.7.0",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.544.0",
     "next": "14.2.6",
     "next-auth": "5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
