--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^10.0.6",
     "resend": "^4.8.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
