--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,9 @@ SUI_PRIVATE_KEY="your-sui-private-key"
 SEAL_ENABLED="false"
 SEAL_PACKAGE_ID="your-seal-package-id"
 SEAL_SERVER_OBJECT_IDS="server-object-id-1,server-object-id-2"
+
+# SUI
+NEXT_PUBLIC_MATCHING_ME_PACKAGE_ID="your package id"
+NEXT_PUBLIC_MATCHING_ME_MODULE_NAME="your module"
+NEXT_PUBLIC_MATCHING_ME_REGISTRY_ID="your registry id"
+NEXT_PUBLIC_SUI_CLOCK_OBJECT_ID="your clock id"
