--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "vercel-build": "prisma generate && prisma migrate deploy && prisma db seed && next build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "doppler": "doppler secrets download --no-file --format env > .env"
+    "doppler": "doppler secrets download --no-file --format env > .env",
+    "contract:build": "cd src/contracts/matching_me && sui move build",
+    "contract:test": "cd src/contracts/matching_me && sui move test",
+    "contract:get-objects": "tsx scripts/get-shared-objects.ts",
+    "contract:test-flow": "bash scripts/test-contract-flow.sh"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -28,6 +32,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
     "bcryptjs": "^2.4.3",
