--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@internationalized/date": "^3.9.0",
     "@mysten/dapp-kit": "^0.18.0",
@@ -45,6 +46,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.544.0",
     "next": "14.2.6",
