--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run copy-wasm && next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && prisma migrate deploy && prisma db seed && npm run copy-wasm && next build",
+    "vercel-build": "prisma generate && prisma migrate deploy && npm run copy-wasm && next build",
     "copy-wasm": "mkdir -p public/static/wasm && cp node_modules/.pnpm/@mysten+walrus-wasm@*/node_modules/@mysten/walrus-wasm/walrus_wasm_bg.wasm public/static/wasm/ 2>/dev/null || cp node_modules/@mysten/walrus-wasm/walrus_wasm_bg.wasm public/static/wasm/ 2>/dev/null || echo 'WASM file copy completed'",
     "test": "jest",
     "test:watch": "jest --watch",
