--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@coinbase/onchainkit": "^1.1.1",
+    "@farcaster/miniapp-sdk": "^0.2.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@internationalized/date": "^3.9.0",
@@ -66,6 +68,7 @@
     "resend": "^4.8.0",
     "sharp": "^0.33.0",
     "tailwind-merge": "^3.3.1",
+    "wagmi": "^2.18.1",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
