evm wallet login

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ GOOGLE_CLIENT_SECRET="your google-client secret"
 
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
+# WalletConnect Configuration
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="your walletconnect project id from https://cloud.reown.com"
+
 # Decentralized Storage Configuration
 # Storage strategy: cloudinary | walrus | hybrid
 STORAGE_STRATEGY="hybrid"
