--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@tanstack/react-query": "^5.90.2",
+    "@web3modal/wagmi": "^5.1.11",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -68,6 +69,7 @@
     "resend": "^4.8.0",
     "sharp": "^0.33.0",
     "tailwind-merge": "^3.3.1",
+    "viem": "^2.38.2",
     "wagmi": "^2.18.1",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
