--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ AUTH_SECRET="this-is-very-secret"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your cloud name"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="Your api key"
 CLOUDINARY_API_SECRET="api secret"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="matchme-demo"
 
 NEXT_PUBLIC_PUSHER_APP_KEY="your pusher app key"
 PUSHER_APP_ID="Your app id"
